<?xml version="1.0"?>
<package format="3">
  <name>test_vesc</name>
  <version>1.0.0</version>
  <description>Test package for VESC drive commands</description>
  <maintainer email="iyerarnav@gmail.com">Arnav Iyer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>